// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csharp snapshot 1`] = `
Object {
  "default": undefined,
  "displayName": "RepositoryCatalogData",
  "docs": Object {
    "links": Array [
      "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata",
    ],
    "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
  },
  "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps.property.RepositoryCatalogData",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
  "optional": true,
  "type": Object {
    "formattingPattern": "object",
  },
  "usage": "public object RepositoryCatalogData { get; set; }",
}
`;

exports[`csharp snapshot 2`] = `
"**<code>RepositoryCatalogData</code>**
\`\`\`csharp
public object RepositoryCatalogData { get; set; }
\`\`\`

- *Type:* <code>object</code>

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---
"
`;

exports[`go snapshot 1`] = `
Object {
  "default": undefined,
  "displayName": "RepositoryCatalogData",
  "docs": Object {
    "links": Array [
      "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata",
    ],
    "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
  },
  "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.CfnPublicRepositoryProps.property.RepositoryCatalogData",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
  "optional": true,
  "type": Object {
    "formattingPattern": "interface{}",
  },
  "usage": "RepositoryCatalogData interface{}",
}
`;

exports[`go snapshot 2`] = `
"**<code>RepositoryCatalogData</code>**
\`\`\`go
RepositoryCatalogData interface{}
\`\`\`

- *Type:* <code>interface{}</code>

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---
"
`;

exports[`java snapshot 1`] = `
Object {
  "default": undefined,
  "displayName": "repositoryCatalogData",
  "docs": Object {
    "links": Array [
      "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata",
    ],
    "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
  },
  "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
  "optional": true,
  "type": Object {
    "formattingPattern": "java.lang.Object",
  },
  "usage": "public java.lang.Object getRepositoryCatalogData();",
}
`;

exports[`java snapshot 2`] = `
"**<code>repositoryCatalogData</code>**
\`\`\`java
public java.lang.Object getRepositoryCatalogData();
\`\`\`

- *Type:* <code>java.lang.Object</code>

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---
"
`;

exports[`python snapshot 1`] = `
Object {
  "default": undefined,
  "displayName": "repository_catalog_data",
  "docs": Object {
    "links": Array [
      "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata",
    ],
    "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
  },
  "fqn": "aws_cdk.aws_ecr.CfnPublicRepositoryProps.property.repository_catalog_data",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
  "optional": true,
  "type": Object {
    "formattingPattern": "typing.Any",
  },
  "usage": "repository_catalog_data: typing.Any",
}
`;

exports[`python snapshot 2`] = `
"**<code>repository_catalog_data</code>**
\`\`\`python
repository_catalog_data: typing.Any
\`\`\`

- *Type:* <code>typing.Any</code>

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---
"
`;

exports[`typescript snapshot 1`] = `
Object {
  "default": undefined,
  "displayName": "repositoryCatalogData",
  "docs": Object {
    "links": Array [
      "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata",
    ],
    "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
  },
  "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
  "optional": true,
  "type": Object {
    "formattingPattern": "any",
  },
  "usage": "public readonly repositoryCatalogData: any;",
}
`;

exports[`typescript snapshot 2`] = `
"**<code>repositoryCatalogData</code>**
\`\`\`typescript
public readonly repositoryCatalogData: any;
\`\`\`

- *Type:* <code>any</code>

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---
"
`;

exports[`wing snapshot 1`] = `
Object {
  "default": undefined,
  "displayName": "repositoryCatalogData",
  "docs": Object {
    "links": Array [
      "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata",
    ],
    "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
  },
  "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
  "optional": true,
  "type": Object {
    "formattingPattern": "any",
  },
  "usage": "repositoryCatalogData: any;",
}
`;

exports[`wing snapshot 2`] = `
"**<code>repositoryCatalogData</code>**
\`\`\`wing
repositoryCatalogData: any;
\`\`\`

- *Type:* <code>any</code>

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---
"
`;
